--- a/Afrinet.Web/Afrinet.Web.csproj
+++ b/Afrinet.Web/Afrinet.Web.csproj
@@ -13,6 +13,7 @@
 
   
   <ItemGroup>
+    <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="2.16.0" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.16.0" />
     <PackageReference Include="Radzen.Blazor" Version="4.24.1" />
