--- a/Afrinet.Web/Afrinet.Web.csproj
+++ b/Afrinet.Web/Afrinet.Web.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="2.16.0" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.16.0" />
+    <PackageReference Include="MudBlazor" Version="6.14.0" />
     <PackageReference Include="Radzen.Blazor" Version="4.24.1" />
   </ItemGroup>
 </Project>
